--- a/recupme2/app/src/main/res/layout/activity_main.xml
+++ b/recupme2/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
+
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
+
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_height="wrap_content"/>
+
+        />
 </FrameLayout>
